# mcp-generator

./: .gitignore  README.md  mcp-gen.bat  pyproject.toml  requirements.txt  setup.py  test_generator.bat
docs/: PROJECT_SUMMARY.md  QUICKSTART.md  TROUBLESHOOTING.md  USAGE.md
examples/: basic-api.yaml  github-api.yaml  weather-api.yaml
scripts/: register-mcp-gen-global.bat
src/mcp_generator/: __init__.py  __main__.py  models.py
src/mcp_generator/cli/: main.py
src/mcp_generator/generator/: __init__.py  code_generator.py
src/mcp_generator/parser/: __init__.py  config_parser.py
src/mcp_generator/templates/: .gitignore.j2  README.md.j2  server.py.j2
src/mcp_generator/validator/: __init__.py  config_validator.py
test-output/: .gitignore  README.md  requirements.txt  server.py
tests/: __init__.py  test_config_parser.py  test_validator.py
